[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/main/world/creature/CreatureVisuals.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main/world/creature/creature-chat-icon.gd" type="Script" id=2]
[ext_resource path="res://src/main/world/creature/creature.gd" type="Script" id=3]
[ext_resource path="res://src/main/world/ChatIcon.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/main/world/creature/move-bonk.wav" type="AudioStream" id=5]
[ext_resource path="res://src/main/viewport-outline-material.tres" type="Material" id=6]
[ext_resource path="res://assets/main/world/creature/move-hop.wav" type="AudioStream" id=7]
[ext_resource path="res://src/main/world/creature/creature-collision-shape.gd" type="Script" id=8]
[ext_resource path="res://src/main/world/creature/creature-sfx.gd" type="Script" id=23]

[sub_resource type="ViewportTexture" id=1]
flags = 5
viewport_path = NodePath("CreatureOutline/Viewport")

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
extents = Vector2( 28, 14 )

[node name="Creature" type="KinematicBody2D"]
script = ExtResource( 3 )
__meta__ = {
"dna": {

}
}

[node name="ChatIcon" parent="." instance=ExtResource( 4 )]
script = ExtResource( 2 )
bubble_type = 0
creature_visuals_path = NodePath("../CreatureOutline/Viewport/Visuals")

[node name="CreatureOutline" type="Node2D" parent="."]

[node name="Viewport" type="Viewport" parent="CreatureOutline"]
size = Vector2( 1200, 1200 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3
audio_listener_enable_2d = true

[node name="Visuals" parent="CreatureOutline/Viewport" instance=ExtResource( 1 )]
position = Vector2( 512, 912 )
dna = {
"property:BodyColors:belly": 0,
"shader:Body:black": Color( 0, 0, 0, 1 ),
"shader:Body:green": Color( 0, 0, 0, 1 ),
"shader:Body:red": Color( 0, 0, 0, 1 ),
"shader:EmoteBody:black": Color( 0, 0, 0, 1 ),
"shader:FarArm:black": Color( 0, 0, 0, 1 ),
"shader:FarArm:red": Color( 0, 0, 0, 1 ),
"shader:FarLeg:black": Color( 0, 0, 0, 1 ),
"shader:FarLeg:red": Color( 0, 0, 0, 1 ),
"shader:NearArm:black": Color( 0, 0, 0, 1 ),
"shader:NearArm:red": Color( 0, 0, 0, 1 ),
"shader:NearLeg:black": Color( 0, 0, 0, 1 ),
"shader:NearLeg:red": Color( 0, 0, 0, 1 ),
"shader:Neck0/HeadBobber/EarZ0:black": Color( 0, 0, 0, 1 ),
"shader:Neck0/HeadBobber/EarZ0:red": Color( 0, 0, 0, 1 ),
"shader:Neck0/HeadBobber/EarZ1:black": Color( 0, 0, 0, 1 ),
"shader:Neck0/HeadBobber/EarZ1:red": Color( 0, 0, 0, 1 ),
"shader:Neck0/HeadBobber/EarZ2:black": Color( 0, 0, 0, 1 ),
"shader:Neck0/HeadBobber/EarZ2:red": Color( 0, 0, 0, 1 ),
"shader:Neck0/HeadBobber/EmoteArms:black": Color( 0, 0, 0, 1 ),
"shader:Neck0/HeadBobber/EmoteArms:red": Color( 0, 0, 0, 1 ),
"shader:Neck0/HeadBobber/EmoteBrain:black": Color( 0, 0, 0, 1 ),
"shader:Neck0/HeadBobber/EmoteEyes:black": Color( 0, 0, 0, 1 ),
"shader:Neck0/HeadBobber/Eyes:black": Color( 0, 0, 0, 1 ),
"shader:Neck0/HeadBobber/Eyes:blue": Color( 0, 0, 0, 1 ),
"shader:Neck0/HeadBobber/Eyes:green": Color( 0, 0, 0, 1 ),
"shader:Neck0/HeadBobber/Eyes:red": Color( 0, 0, 0, 1 ),
"shader:Neck0/HeadBobber/Head:black": Color( 0, 0, 0, 1 ),
"shader:Neck0/HeadBobber/Head:red": Color( 0, 0, 0, 1 ),
"shader:Neck0/HeadBobber/HornZ0:black": Color( 0, 0, 0, 1 ),
"shader:Neck0/HeadBobber/HornZ0:green": Color( 0, 0, 0, 1 ),
"shader:Neck0/HeadBobber/HornZ0:red": Color( 0, 0, 0, 1 ),
"shader:Neck0/HeadBobber/HornZ1:black": Color( 0, 0, 0, 1 ),
"shader:Neck0/HeadBobber/HornZ1:green": Color( 0, 0, 0, 1 ),
"shader:Neck0/HeadBobber/HornZ1:red": Color( 0, 0, 0, 1 ),
"shader:Neck0/HeadBobber/Mouth:black": Color( 0, 0, 0, 1 ),
"shader:Neck0/HeadBobber/Mouth:red": Color( 0, 0, 0, 1 )
}

[node name="TextureRect" type="TextureRect" parent="CreatureOutline"]
light_mask = 2
material = ExtResource( 6 )
margin_left = -200.0
margin_top = -366.315
margin_right = 1000.0
margin_bottom = 833.685
rect_scale = Vector2( 0.4, 0.4 )
texture = SubResource( 1 )
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreatureSfx" type="Node2D" parent="."]
position = Vector2( 512, 912 )
script = ExtResource( 23 )

[node name="Munch" type="AudioStreamPlayer" parent="CreatureSfx"]
bus = "Voice Bus"

[node name="Voice" type="AudioStreamPlayer" parent="CreatureSfx"]
volume_db = 6.0
bus = "Voice Bus"

[node name="HelloTimer" type="Timer" parent="CreatureSfx"]
one_shot = true

[node name="SuppressSfxTimer" type="Timer" parent="CreatureSfx"]
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
script = ExtResource( 8 )
creature_visuals_path = NodePath("../CreatureOutline/Viewport/Visuals")

[node name="HopSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -4.0
bus = "Sound Bus"

[node name="BonkSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -4.0
bus = "Sound Bus"
[connection signal="creature_arrived" from="CreatureOutline/Viewport/Visuals" to="." method="_on_CreatureVisuals_creature_arrived"]
[connection signal="creature_arrived" from="CreatureOutline/Viewport/Visuals" to="CreatureSfx" method="_on_CreatureVisuals_creature_arrived"]
[connection signal="food_eaten" from="CreatureOutline/Viewport/Visuals" to="." method="_on_CreatureVisuals_food_eaten"]
[connection signal="food_eaten" from="CreatureOutline/Viewport/Visuals" to="CreatureSfx" method="_on_CreatureVisuals_food_eaten"]
[connection signal="landed" from="CreatureOutline/Viewport/Visuals" to="." method="_on_CreatureVisuals_landed"]
[connection signal="movement_mode_changed" from="CreatureOutline/Viewport/Visuals" to="." method="_on_CreatureVisuals_movement_mode_changed"]
[connection signal="visual_fatness_changed" from="CreatureOutline/Viewport/Visuals" to="." method="_on_CreatureVisuals_visual_fatness_changed"]
[connection signal="timeout" from="CreatureSfx/HelloTimer" to="CreatureSfx" method="_on_HelloTimer_timeout"]
[connection signal="extents_changed" from="CollisionShape2D" to="." method="_on_CollisionShape2D_extents_changed"]
